--- a/HeapHHApportionment-inclass.ipynb
+++ b/HeapHHApportionment-inclass.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZSYK0pLPmDLFMFv3MelH5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +22,25 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/krusegw/cs315/blob/main/HeapHHApportionment-inclass.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/lukeb667/laBecker_CS315/blob/main/HeapHHApportionment-inclass.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "# Luke Becker\n",
+        "# October 20, 2025\n",
+        "# Heap Apportionment modifications."
+      ],
+      "metadata": {
+        "id": "GsPsr90X89zV"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "bidyXPjzscFG",
         "cellView": "form"
@@ -245,7 +257,7 @@
         "id": "eNn4lekftubR",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -406,7 +418,7 @@
         "cellView": "form",
         "id": "d3kgTv-ttX5D"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -490,7 +502,7 @@
         "id": "TMNMcGFuuW9n",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -503,12 +515,12 @@
         "  import numpy as np\n",
         "\n",
         "  # Enter the total number of Representatives\n",
-        "  R = 6\n",
+        "  R = 435\n",
         "\n",
         "  # A list with the population of each state, given in the same order\n",
         "  # (alphabetically is the most natural) as the list with the state names.\n",
-        "  statePop = [6,9,5]\n",
-        "  stateAbbrev = [\"MD\",\"PA\", \"RI\"]\n",
+        "  statePop = [5024279,733391,7151502,3011524,39538223,5773714,3605944,989948,21538187,10711908,1455271,1839106,12812508,6785528,3190369,2937880,4505836,4657757,1362359,6177224,7029917,10077331,5706494,2961279,6154913,1084225,1961504,3104614,1377529,9288994,2117522,20201249,10439388,779094,11799448,3959353,4237256,13002700,1097379,5118425,886667,6910840,29145505,3271616,643077,8631393,7705281,1793716,5893718,576851]\n",
+        "  stateAbbrev = [\"Alabama\",\"Alaska\",\"Arizona\",\"Arkansas\",\"California\",\"Colorado\",\"Connecticut\",\"Delaware\",\"Florida\",\"Georgia\",\"Hawaii\",\"Idaho\",\"Illinois\",\"Indiana\",\"Iowa\",\"Kansas\",\"Kentucky\",\"Louisiana\",\"Maine\",\"Maryland\",\"Massachusetts\",\"Michigan\",\"Minnesota\",\"Mississippi\",\"Missouri\",\"Montana\",\"Nebraska\",\"Nevada\",\"NewHampshire\",\"NewJersey\",\"NewMexico\",\"NewYork\",\"NorthCarolina\",\"NorthDakota\",\"Ohio\",\"Oklahoma\",\"Oregon\",\"Pennsylvania\",\"RhodeIsland\",\"SouthCarolina\",\"SouthDakota\",\"Tennessee\",\"Texas\",\"Utah\",\"Vermont\",\"Virginia\",\"Washington\",\"WestVirginia\",\"Wisconsin\",\"Wyoming\"]\n",
         "\n",
         "  # Set up the list containing the number of representatives for each state\n",
         "  # in the same state order as above.\n",
@@ -548,10 +560,58 @@
         "  print(stateRep)"
       ],
       "metadata": {
-        "id": "SMb_HioZMu2P"
+        "id": "SMb_HioZMu2P",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8fbd10a5-881c-42c4-a300-73067be08d26"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[7, 1, 9, 4, 52, 8, 5, 1, 28, 14, 2, 2, 17, 9, 4, 4, 6, 6, 2, 8, 9, 13, 8, 4, 8, 2, 3, 4, 2, 12, 3, 26, 14, 1, 15, 5, 6, 17, 2, 7, 1, 9, 38, 4, 1, 11, 10, 2, 8, 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check that the code above is correct\n",
+        "import csv\n",
+        "\n",
+        "with open(\"StatesPopulation.csv\", \"r\") as check_file:\n",
+        "  data = list(csv.reader(check_file)) # Read the data\n",
+        "\n",
+        "  # Build a correct list from the existing file.\n",
+        "  correct_list = []\n",
+        "  for i in range(1, len(data)):\n",
+        "    correct_list.append(int(data[i][2]))\n",
+        "\n",
+        "  if correct_list == stateRep:\n",
+        "    print(\"Correct!\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kes3AJSL-eO6",
+        "outputId": "e47c52d6-d992-4649-88b3-b360f487bdd3"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Correct!\n"
+          ]
+        }
+      ]
     }
   ]
 }
