--- a/binary_search_tree.ipynb
+++ b/binary_search_tree.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4t435auZW9Sk6LttYw9je",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/krusegw/cs315/blob/main/binary_search_tree.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/lukeb667/laBecker_CS315/blob/main/binary_search_tree.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -87,12 +86,12 @@
         "cellView": "form",
         "id": "Oc_6iAmK7oq0"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 25,
       "metadata": {
         "cellView": "form",
         "id": "fSMdIhwL7KLB"
@@ -363,306 +362,60 @@
         "if __name__ == \"__main__\":\n",
         "\n",
         "\timport numpy as np\n",
-        "\n",
-        "\t# Insert.\n",
-        "\tbinary_tree1 = BinarySearchTree()\n",
-        "\tarray1 = np.arange(0, 100, 13)\n",
-        "\tnp.random.shuffle(array1)\n",
-        "\tfor value in array1:\n",
-        "\t\tbinary_tree1.tree_insert(value)\n",
-        "\tprint(binary_tree1.is_BST())\n",
-        "\tprint(binary_tree1)\n",
-        "\tbinary_tree1.inorder_tree_walk(binary_tree1.get_root())\n",
-        "\t# Search.\n",
-        "\tnode39 = binary_tree1.search(binary_tree1.get_root(), 39)\n",
-        "\tprint(\"Found:\", node39)\n",
-        "\t# Unsuccessful search.\n",
-        "\tprint(\"Found:\", binary_tree1.search(binary_tree1.get_root(), 55))\n",
-        "\t# Iterative.\n",
-        "\tprint(\"Found:\", binary_tree1.iterative_search(binary_tree1.get_root(), 39))\n",
-        "\tprint(\"Found:\", binary_tree1.iterative_search(binary_tree1.get_root(), 55))\n",
-        "\t# Minimum and maximum.\n",
-        "\tprint(\"Max:\", binary_tree1.maximum(binary_tree1.get_root()))\n",
-        "\tprint(\"Min:\", binary_tree1.minimum(binary_tree1.get_root()))\n",
-        "\t# Delete.\n",
-        "\tbinary_tree1.tree_delete(node39)\n",
-        "\tprint(\"After deleting 39: \")\n",
-        "\tprint(binary_tree1.is_BST())\n",
-        "\tprint(binary_tree1)\n",
-        "\tbinary_tree1.inorder_tree_walk(binary_tree1.get_root(), lambda x: print(\"Node:\", x))\n",
-        "\t# Delete node that does not exist.\n",
-        "\tnode100 = BinarySearchTreeNode(100)\n",
-        "\t# try:\n",
-        "\t# \tbinary_tree1.tree_delete(node100)  # throws error; comment out to avoid error\n",
-        "\t# except RuntimeError as e:\n",
-        "\t# \tprint(e)\n",
-        "\tprint()\n",
+        "\timport time\n",
         "\n",
         "\t# Textbook example.\n",
-        "\tbinary_tree2 = BinarySearchTree()\n",
+        "\tbinary_tree = BinarySearchTree()\n",
         "\tlist1 = [15, 18, 6, 3, 2, 4, 7, 13, 9, 17, 20]\n",
+        "\tlist1 = list(range(1, 100)) ; # list1.reverse()\n",
+        "\n",
+        "\t# Time creation\n",
+        "\tstart = time.time()\n",
         "\tfor value in list1:\n",
-        "\t\tbinary_tree2.tree_insert(value)\n",
-        "\tprint(binary_tree2.is_BST())\n",
-        "\tprint(binary_tree2)\n",
-        "\tbinary_tree2.inorder_tree_walk(binary_tree2.get_root())\n",
-        "\t# Successor and predecessor.\n",
-        "\tprint(\"Successor:\", binary_tree2.successor(binary_tree2.get_root()))  # should be 17\n",
-        "\tprint(\"Predecessor:\", binary_tree2.predecessor(binary_tree2.get_root()))  # should be 13\n",
-        "\tprint(\"Successor: \", binary_tree2.successor(binary_tree2.search(binary_tree2.get_root(), 13)))  # should be 15\n",
-        "\tprint(\"Predecessor:\", binary_tree2.predecessor(binary_tree2.search(binary_tree2.get_root(), 7)))  # should be 6\n",
+        "\t\tbinary_tree.tree_insert(value)\n",
+        "\tend = time.time()\n",
+        "\toverall = end - start\n",
+        "\tprint(\"Creation\")\n",
+        "\tprint(\"T:\", overall)\n",
         "\n",
-        "\t# Delete the remaining nodes, one by one.\n",
-        "\tarray2 = np.array(list1)\n",
-        "\tnp.random.shuffle(array2)\n",
-        "\tfor value in array2:\n",
-        "\t\tprint(\"After deleting \" + str(value) + \":\")\n",
-        "\t\tbinary_tree2.tree_delete(binary_tree2.search(binary_tree2.get_root(), value))\n",
-        "\t\tprint(binary_tree2.is_BST())\n",
-        "\t\tprint(binary_tree2)\n",
         "\n",
-        "\t# Binary tree of objects.\n",
-        "\tbinary_tree3 = BinarySearchTree(KeyObject.get_key)\n",
-        "\tstates = [\"AL\", \"AK\", \"AZ\", \"AR\", \"CA\", \"CO\", \"CT\", \"HI\", \"NH\", \"NY\"]\n",
-        "\tlist3 = []\n",
-        "\tfor i in range(len(states)):\n",
-        "\t\tlist3.append(KeyObject(states[i], i))\n",
-        "\tarray3 = np.array(list3)\n",
-        "\tnp.random.shuffle(array3)\n",
-        "\tfor x in array3:\n",
-        "\t\tbinary_tree3.tree_insert(x)\n",
-        "\tprint(binary_tree3.is_BST())\n",
-        "\tprint(binary_tree3)\n",
-        "\n",
-        " # If get_key not provided, must define __gt__ or __lt__ for objects in the BST.\n",
-        "\tbinary_tree4 = BinarySearchTree()\n",
-        "\tfor x in array3:\n",
-        "\t\tbinary_tree4.tree_insert(x)\n",
-        "\tprint(binary_tree4)\n",
-        "\tprint(binary_tree4.is_BST())\n",
-        "\n",
-        "\t# Binary tree that does not have the BST property.\n",
-        "\tbinary_tree5 = BinarySearchTree()\n",
-        "\tbinary_tree5.tree_insert(100)\n",
-        "\tnew_node = BinarySearchTreeNode(101)\n",
-        "\tnew_node.left = binary_tree5.nil\n",
-        "\tnew_node.right = binary_tree5.nil\n",
-        "\tbinary_tree5.root.left = new_node\n",
-        "\tnew_node.parent = binary_tree5.get_root()\n",
-        "\tprint(binary_tree5.is_BST())\n",
-        "\tprint(binary_tree5)\n",
-        "\n",
-        "\t# Large tree.\n",
-        "\tbinary_tree6 = BinarySearchTree()\n",
-        "\tarray2 = np.arange(-1000, 10000, 1000)\n",
-        "\tnp.random.shuffle(array2)\n",
-        "\tfor value in array2:\n",
-        "\t\tbinary_tree6.tree_insert(value)\n",
-        "\tprint(binary_tree6.is_BST())"
+        "\t# Time traversal\n",
+        "\tstart = time.time()\n",
+        "\tbinary_tree.inorder_tree_walk(binary_tree.get_root(), lambda x: None)\n",
+        "\tend = time.time()\n",
+        "\toverall = end - start\n",
+        "\tprint(\"Traversal\")\n",
+        "\tprint(\"T:\", overall)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "COC4wtbY7Rt_",
-        "outputId": "f269de6f-cbe5-4091-821a-6a31b5fefd86"
+        "outputId": "a625cfb0-313c-4935-92c6-f830ae20770b"
       },
-      "execution_count": 5,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "True\n",
-            "91\n",
-            "      78\n",
-            "          65\n",
-            "        52\n",
-            "    39\n",
-            "  26\n",
-            "    13\n",
-            "      0\n",
-            "\n",
-            "0\n",
-            "13\n",
-            "26\n",
-            "39\n",
-            "52\n",
-            "65\n",
-            "78\n",
-            "91\n",
-            "Found: 39\n",
-            "Found: None\n",
-            "Found: 39\n",
-            "Found: None\n",
-            "Max: 91\n",
-            "Min: 0\n",
-            "After deleting 39: \n",
-            "True\n",
-            "91\n",
-            "    78\n",
-            "        65\n",
-            "      52\n",
-            "  26\n",
-            "    13\n",
-            "      0\n",
-            "\n",
-            "Node: 0\n",
-            "Node: 13\n",
-            "Node: 26\n",
-            "Node: 52\n",
-            "Node: 65\n",
-            "Node: 78\n",
-            "Node: 91\n",
-            "\n",
-            "True\n",
-            "    20\n",
-            "  18\n",
-            "    17\n",
-            "15\n",
-            "      13\n",
-            "        9\n",
-            "    7\n",
-            "  6\n",
-            "      4\n",
-            "    3\n",
-            "      2\n",
-            "\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "6\n",
-            "7\n",
-            "9\n",
-            "13\n",
-            "15\n",
-            "17\n",
-            "18\n",
-            "20\n",
-            "Successor: 17\n",
-            "Predecessor: 13\n",
-            "Successor:  15\n",
-            "Predecessor: 6\n",
-            "After deleting 20:\n",
-            "True\n",
-            "  18\n",
-            "    17\n",
-            "15\n",
-            "      13\n",
-            "        9\n",
-            "    7\n",
-            "  6\n",
-            "      4\n",
-            "    3\n",
-            "      2\n",
-            "\n",
-            "After deleting 15:\n",
-            "True\n",
-            "  18\n",
-            "17\n",
-            "      13\n",
-            "        9\n",
-            "    7\n",
-            "  6\n",
-            "      4\n",
-            "    3\n",
-            "      2\n",
-            "\n",
-            "After deleting 17:\n",
-            "True\n",
-            "18\n",
-            "      13\n",
-            "        9\n",
-            "    7\n",
-            "  6\n",
-            "      4\n",
-            "    3\n",
-            "      2\n",
-            "\n",
-            "After deleting 6:\n",
-            "True\n",
-            "18\n",
-            "    13\n",
-            "      9\n",
-            "  7\n",
-            "      4\n",
-            "    3\n",
-            "      2\n",
-            "\n",
-            "After deleting 4:\n",
-            "True\n",
-            "18\n",
-            "    13\n",
-            "      9\n",
-            "  7\n",
-            "    3\n",
-            "      2\n",
-            "\n",
-            "After deleting 18:\n",
-            "True\n",
-            "  13\n",
-            "    9\n",
-            "7\n",
-            "  3\n",
-            "    2\n",
-            "\n",
-            "After deleting 9:\n",
-            "True\n",
-            "  13\n",
-            "7\n",
-            "  3\n",
-            "    2\n",
-            "\n",
-            "After deleting 13:\n",
-            "True\n",
-            "7\n",
-            "  3\n",
-            "    2\n",
-            "\n",
-            "After deleting 7:\n",
-            "True\n",
-            "3\n",
-            "  2\n",
-            "\n",
-            "After deleting 3:\n",
-            "True\n",
-            "2\n",
-            "\n",
-            "After deleting 2:\n",
-            "True\n",
-            "\n",
-            "True\n",
-            "    NY\n",
-            "  NH\n",
-            "HI\n",
-            "    CT\n",
-            "  CO\n",
-            "    CA\n",
-            "          AR\n",
-            "        AZ\n",
-            "      AK\n",
-            "        AL\n",
-            "\n",
-            "    NY\n",
-            "  NH\n",
-            "HI\n",
-            "    CT\n",
-            "  CO\n",
-            "    CA\n",
-            "          AR\n",
-            "        AZ\n",
-            "      AK\n",
-            "        AL\n",
-            "\n",
-            "True\n",
-            "False\n",
-            "100\n",
-            "  101\n",
-            "\n",
-            "True\n"
+            "Creation\n",
+            "T: 0.0007026195526123047\n",
+            "Traversal\n",
+            "T: 3.504753112792969e-05\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xLxBGqCukFmY"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
